test/resources/valid/ValidEmptyFlow.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
}