test/resources/invalid/typecheck/InvalidNumber.flo
action INCREMENT_COUNTER = counter();

flow COUNTER = {
    number count = false;
    INCREMENT_COUNTER >> count;
}